With histogram comparison and comet ml integration

--- a/.gitignore
+++ b/.gitignore
@@ -6,8 +6,20 @@
 *.o
 *.png
 *.pdf
+*.index
+*.record
+*.tf.data*
 __pycache__
 Env/env
+Env/install
 Ops/build
 Ops/release
+Ops/CMakeFiles
 Samples/*
+Train/trainData/*
+Train/testData/*
+Train/valData/*
+Train/Data/*
+Train/NewKFData/*
+Train/OldKFData/*
+checkpoint
