--- a/setup.yaml
+++ b/setup.yaml
@@ -1,12 +1,13 @@
 retrain : True
 comet_project_name : Vertex_CNN_transfer
 comet_experiment_name : z0CNN_base
-description : baseMVA woth chi2, with kernel compare
+description : baseMVA woth chi2, flip in z0
 
-eval_folder : kernelcompareplots
+eval_folder : plots
+data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 
 starting_lr : 0.001
-epochs : 50
+epochs : 75
 quartile_1 : 0.25
 quartile_2 : 0.75
 
