--- a/setuptransfer.yaml
+++ b/setuptransfer.yaml
@@ -1,12 +1,13 @@
 retrain : True
 comet_project_name : Vertex_CNN_transfer
 comet_experiment_name : z0CNN_transfer
-description : baseMVA teacher, little MVA learner
+description : baseMVA teacher, little MVA learner, specialised Loss function
 
-eval_folder : transferplots
+eval_folder : plots
+data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 
 starting_lr : 0.001
-epochs : 75
+epochs : 100
 quartile_1 : 0.25
 quartile_2 : 0.75
 
