--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -1,21 +1,12 @@
 retrain : True
 comet_project_name : Vertex_CNN_FH
-comet_experiment_name : NN_DiffArgmax_Features
-description : QDANN_Huber
+comet_experiment_name : QDANN_pretrained
+description : QDANN_pretrained_50_prune
 
 trainable : "QDiffArgMax"
-track_features : ['normed_trk_pt',
-                  'trk_MVA1',
-                  'normed_trk_eta',
-                  'binned_trk_chi2rphi',
-                  'binned_trk_chi2rz',
-                  'binned_trk_bendchi2']
-weight_features : ['normed_trk_pt',
-                   'trk_MVA1',
-                   'trk_over_eta_squared',
-                   'binned_trk_chi2rphi',
-                   'binned_trk_chi2rz',
-                   'binned_trk_bendchi2']
+track_features : ['normed_trk_pt','trk_MVA1','normed_trk_eta']
+weight_features : ['normed_trk_pt','trk_MVA1','trk_over_eta_squared']
+pretrained : True
 
 
 eval_folder : Qplots
@@ -24,23 +15,51 @@ data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 Nlatent : 2
 
 starting_lr : 0.001
-epochs : 75
+epochs : 100
 
 z0_loss_weight : 1
 crossentropy_loss_weight : 1
 
 Huber_delta : 5
 
-l1regloss : 1e-10
+l1regloss : 1e-5
 l2regloss : 1e-10
 nweightnodes : 10
 nweightlayers : 2
 nassocnodes : 20
 nassoclayers : 2
-bits : 24
-integer : 12
-alpha : 1
 
-Final_Sparsity : 0.00
+Final_Sparsity : 0.9
 Begin_step : 1000
-End_step : 6000
+End_step : 3000
+
+QConfig:
+  weight_1: 
+    kernel_quantizer: quantized_bits(5,3)
+    bias_quantizer: quantized_bits(7,1)
+    activation : quantized_relu(11,2)
+  weight_2:
+    kernel_quantizer : quantized_bits(4,1)
+    bias_quantizer : quantized_bits(7,1)
+    activation : quantized_relu(11,2)
+  weight_final:
+    kernel_quantizer : quantized_bits(4,2)
+    bias_quantizer : quantized_bits(8,1)
+    activation : quantized_relu(9,1)
+  conv:
+    kernel_quantizer : quantized_bits(5,2)
+    bias_quantizer : quantized_bits(8,2)
+    activation : quantized_relu(7,1)
+  association_0 :
+    kernel_quantizer : quantized_bits(8,4,alpha="auto")
+    bias_quantizer : quantized_bits(6,1,alpha="auto")
+    activation : quantized_relu(7,3)
+  association_1 : 
+    kernel_quantizer : quantized_bits(5,3,alpha="auto")
+    bias_quantizer : quantized_bits(6,1,alpha="auto")
+    activation : quantized_relu(7,3)
+  association_final : 
+    kernel_quantizer : quantized_bits(4,2,alpha="auto")
+    bias_quantizer : quantized_bits(5,2,alpha="auto")
+            
+        
