--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -15,10 +15,16 @@ data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 Nlatent : 2
 
 starting_lr : 0.0001
+qtrain_starting_lr : 0.0001
+
 epochs : 100
+qtrain_epochs : 100
 
 z0_loss_weight : 1
 crossentropy_loss_weight : 2
+
+qtrain_z0_loss_weight : 1
+qtrain_crossentropy_loss_weight : 1
 
 Huber_delta : 5
 
