--- a/setupQDAOldKF.yaml
+++ b/setupQDAOldKF.yaml
@@ -15,10 +15,16 @@ data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 Nlatent : 2
 
 starting_lr : 0.0001
+qtrain_starting_lr : 0.005
+
 epochs : 100
+qtrain_epochs : 100
 
 z0_loss_weight : 1
-crossentropy_loss_weight : 1.5
+crossentropy_loss_weight : 2
+
+qtrain_z0_loss_weight : 1
+qtrain_crossentropy_loss_weight : 1
 
 Huber_delta : 5
 
@@ -29,7 +35,7 @@ nweightlayers : 2
 nassocnodes : 20
 nassoclayers : 2
 
-Final_Sparsity : 0.1
+Final_Sparsity : 0.3
 Begin_step : 10
 End_step : 60
 
