--- a/setupDA.yaml
+++ b/setupDA.yaml
@@ -4,9 +4,9 @@ comet_experiment_name : NN_DiffArgmax_Features
 description : baseDANN_with_quality_reduced_features_Huber
 
 trainable : "DiffArgMax"
-track_features : ['normed_trk_pt','trk_MVA1','normed_trk_eta']
-weight_features : ['normed_trk_pt','trk_MVA1','trk_over_eta_squared']
-
+track_features : ['bit_trk_pt','bit_trk_MVA1','bit_trk_eta']
+weight_features : ['bit_trk_pt','bit_trk_MVA1','bit_trk_eta']
+bit_inputs : True
 
 eval_folder : DAplots
 data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
