--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -4,9 +4,10 @@ comet_experiment_name : QDANN_pretrained
 description : QDANN_pretrained_90_prune
 
 trainable : "QDiffArgMax"
-track_features : ['normed_trk_pt','trk_MVA1','normed_trk_eta']
-weight_features : ['normed_trk_pt','trk_MVA1','trk_over_eta_squared']
+track_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta']
+weight_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta']
 pretrained : True
+bit_inputs : True
 
 
 eval_folder : Qplots
@@ -14,10 +15,10 @@ data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 
 Nlatent : 2
 
-starting_lr : 0.0001
+starting_lr : 0.001
 qtrain_starting_lr : 0.0001
 
-epochs : 100
+epochs : 175
 qtrain_epochs : 100
 
 z0_loss_weight : 1
