--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -1,11 +1,11 @@
 retrain : True
 comet_project_name : Vertex_CNN_FH
 comet_experiment_name : QDANN_pretrained
-description : QDANN_pretrained_90_prune
+description : QDANN_Bit_inputs
 
 trainable : "QDiffArgMax"
-track_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta']
-weight_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta']
+track_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','normed_trk_eta'] #
+weight_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','trk_over_eta_squared'] #
 pretrained : True
 bit_inputs : True
 
@@ -16,16 +16,16 @@ data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 Nlatent : 2
 
 starting_lr : 0.001
-qtrain_starting_lr : 0.0001
+qtrain_starting_lr : 0.001
 
 epochs : 175
-qtrain_epochs : 100
+qtrain_epochs : 175
 
 z0_loss_weight : 1
-crossentropy_loss_weight : 2
+crossentropy_loss_weight : 1
 
 qtrain_z0_loss_weight : 1
-qtrain_crossentropy_loss_weight : 1
+qtrain_crossentropy_loss_weight : 2
 
 Huber_delta : 5
 
@@ -36,26 +36,25 @@ nweightlayers : 2
 nassocnodes : 20
 nassoclayers : 2
 
-Final_Sparsity : 0.3
+Final_Sparsity : 1.0
 Begin_step : 10
 End_step : 60
 
 QConfig:
   weight_1: 
-    kernel_quantizer: quantized_bits(5,3)
-    bias_quantizer: quantized_bits(7,1)
+    kernel_quantizer: quantized_bits(5,3,alpha=1)
+    bias_quantizer: quantized_bits(7,1,alpha=1)
     activation : quantized_relu(11,2)
   weight_2:
-    kernel_quantizer : quantized_bits(4,1)
-    bias_quantizer : quantized_bits(7,1)
+    kernel_quantizer : quantized_bits(4,1,alpha=1)
+    bias_quantizer : quantized_bits(7,1,alpha=1)
     activation : quantized_relu(11,2)
   weight_final:
-    kernel_quantizer : quantized_bits(4,2)
-    bias_quantizer : quantized_bits(8,1)
+    kernel_quantizer : quantized_bits(4,2,alpha=1)
+    bias_quantizer : quantized_bits(8,1,alpha=1)
     activation : quantized_relu(9,1)
   conv:
-    kernel_quantizer : quantized_bits(5,2)
-    bias_quantizer : quantized_bits(8,2)
+    kernel_quantizer : quantized_bits(5,2,alpha=1)
     activation : quantized_relu(7,1)
   association_0 :
     kernel_quantizer : quantized_bits(8,4,alpha=1)
