--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -5,18 +5,18 @@ description : QDANN_Bit_inputs
 
 trainable : "QDiffArgMax"
 track_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','normed_trk_eta'] #
-weight_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','trk_over_eta_squared'] #
+weight_features :  ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','trk_over_eta_squared'] #
 pretrained : True
-bit_inputs : True
+bit_inputs : False
 
 
 eval_folder : Qplots
 data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
 
-Nlatent : 2
+Nlatent : 0
 
 starting_lr : 0.005
-qtrain_starting_lr : 0.001
+qtrain_starting_lr : 0.0001
 
 epochs : 175
 qtrain_epochs : 175
@@ -36,7 +36,7 @@ nweightlayers : 2
 nassocnodes : 20
 nassoclayers : 2
 
-Final_Sparsity : 1.0
+Final_Sparsity : 0.3
 Begin_step : 10
 End_step : 60
 
