--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -4,14 +4,20 @@ comet_experiment_name : QDANN_pretrained
 description : QDANN_Bit_inputs
 
 trainable : "QDiffArgMax"
-track_features : ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','normed_trk_eta'] #
-weight_features :  ['bit_trk_pt','rescaled_bit_MVA1','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','trk_over_eta_squared'] #
+weight_features : ['normed_trk_pt','trk_MVA1','normed_trk_eta'] #['abs_trk_word_pT','rescaled_trk_word_MVAquality','abs_trk_word_eta'] #
+track_features : ['normed_trk_pt','trk_MVA1','normed_trk_over_eta'] #['abs_trk_word_pT','rescaled_trk_word_MVAquality','abs_trk_word_eta']  #['bit_trk_pt','rescaled_bit_MVA1','rescaled_bit_trk_z0_res','bit_trk_eta'] #['normed_trk_pt','trk_MVA1','normed_trk_eta'] #
 pretrained : True
 bit_inputs : False
+pretrain_DA : False
+
+
+QuantisedModelName : Quantised_model
+UnQuantisedModelName : NewKF_UnQuantised_model
+PreTrainedModelName : NewKF_UnQuantised_model
 
 
 eval_folder : Qplots
-data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/
+data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/NewKFData
 
 Nlatent : 0
 
