--- a/setupQDANewKF.yaml
+++ b/setupQDANewKF.yaml
@@ -12,8 +12,8 @@ pretrain_DA : False
 
 
 QuantisedModelName : Quantised_model
-UnQuantisedModelName : NewKF_UnQuantised_model
-PretrainedModelName : NewKF_UnQuantised_model
+UnquantisedModelName : NewKF_Unquantised_model
+PretrainedModelName : NewKF_Unquantised_model
 
 
 eval_folder : Qplots
@@ -21,11 +21,11 @@ data_folder : /home/cebrown/Documents/Datasets/VertexDatasets/NewKFData
 
 Nlatent : 0
 
-starting_lr : 0.005
+starting_lr : 0.001
 qtrain_starting_lr : 0.0001
 
-epochs : 150
-qtrain_epochs : 150
+epochs : 75
+qtrain_epochs : 1
 
 z0_loss_weight : 1
 crossentropy_loss_weight : 1
@@ -33,7 +33,7 @@ crossentropy_loss_weight : 1
 qtrain_z0_loss_weight : 1
 qtrain_crossentropy_loss_weight : 2
 
-Huber_delta : 5
+Huber_delta : 0.5
 
 l1regloss : 1e-5
 l2regloss : 1e-10
