Various improvements to eval scripts and minor bug fixes

--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ Train/Data/*
 Train/NewKFData/*
 Train/OldKFData/*
 Train/NewKFQplots/*
+Train/ConvertFolder/*
 checkpoint
 Train/*.yaml
 Train/*.py
