--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cmake.configureOnOpen": false,
     "files.associations": {
         "*.py": "python",
-        "Plotter.C": "cpp"
+        "Plotter.C": "cpp",
+        "vtxPlotter.C": "cpp"
     }
 }
