--- a/setupQDAOldKF.yaml
+++ b/setupQDAOldKF.yaml
@@ -1,11 +1,11 @@
 retrain : True
 comet_project_name : Vertex_CNN_Prune
-comet_experiment_name : QDANN_trkWord_3Conv
+comet_experiment_name : QDANN_trkWord_3Conv_20z0
 description : QDANN_fixed_point_latent
 
 trainable : "QDiffArgMax"
 weight_features : ['abs_trk_word_pT','rescaled_trk_word_MVAquality','abs_trk_word_eta']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_word_eta'] #
-track_features : ['abs_trk_word_pT','rescaled_trk_word_MVAquality','trk_z0_res']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_z0_res']  #
+track_features :  ['abs_trk_word_pT','rescaled_trk_word_MVAquality','trk_z0_res']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_z0_res']  #
 pretrained : True
 bit_inputs : False
 pretrain_DA : True
@@ -32,10 +32,10 @@ qtrain_starting_lr : 0.00001
 epochs : 25
 qtrain_epochs : 10
 
-z0_loss_weight : 1
-crossentropy_loss_weight : 2
-qtrain_z0_loss_weight : 1
-qtrain_crossentropy_loss_weight : 2
+z0_loss_weight : 1.2
+crossentropy_loss_weight : 1
+qtrain_z0_loss_weight : 1.2
+qtrain_crossentropy_loss_weight : 1
 
 Huber_delta : 0.5
 
@@ -46,21 +46,21 @@ nweightlayers : 2
 nassocnodes : 20
 nassoclayers : 2
 
-relative_weight_max : [0.0,0.001,0.005,0.01,0.015,0.02,0.025,0.03,0.035,0.04]
+relative_weight_max : [0.0,0.001,0.005,0.01,0.015,0.02,0.03,0.04,0.06,0.08]
 
 QConfig:
   weight_1: 
-    kernel_quantizer: quantized_bits(6,2,alpha=1)
-    bias_quantizer: quantized_bits(6,1,alpha=1)
-    activation : quantized_relu(8,1)
+    kernel_quantizer: quantized_bits(8,3,alpha=1)
+    bias_quantizer: quantized_bits(8,2,alpha=1)
+    activation : quantized_relu(10,2)
   weight_2:
-    kernel_quantizer : quantized_bits(6,2,alpha=1)
-    bias_quantizer : quantized_bits(6,1,alpha=1)
-    activation : quantized_relu(8,1)
+    kernel_quantizer : quantized_bits(8,3,alpha=1)
+    bias_quantizer : quantized_bits(8,2,alpha=1)
+    activation : quantized_relu(10,2)
   weight_final:
-    kernel_quantizer : quantized_bits(6,2,alpha=1)
-    bias_quantizer : quantized_bits(6,1,alpha=1)
-    activation : quantized_relu(8,1)
+    kernel_quantizer : quantized_bits(8,3,alpha=1)
+    bias_quantizer : quantized_bits(8,2,alpha=1)
+    activation : quantized_relu(10,2)
   conv_1:
     kernel_quantizer : quantized_bits(4,1,alpha=1)
     activation : quantized_relu(5,1)
