--- a/setupQDAOldKF.yaml
+++ b/setupQDAOldKF.yaml
@@ -4,8 +4,8 @@ comet_experiment_name : QDANN_weighted_CMSSW12_
 description : QDANN
 
 trainable : "QDiffArgMax"
-weight_features : ['abs_trk_word_pT','rescaled_trk_word_MVAquality','abs_trk_word_eta']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_word_eta'] #
-track_features :  ['abs_trk_word_pT','rescaled_trk_word_MVAquality','trk_z0_res']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_z0_res']  #
+weight_features : ['abs_trk_word_pT','trk_word_MVAquality','abs_trk_word_eta']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_word_eta'] #
+track_features :  ['abs_trk_word_pT','trk_word_MVAquality','trk_z0_res']  #['unscaled_trk_word_pT','unscaled_trk_word_MVAquality','unscaled_trk_z0_res']  #
 pretrained : False
 bit_inputs : False
 pretrain_DA : False
@@ -22,12 +22,12 @@ prune_iterations : 8
 nbins : 256
 
 eval_folder : Qplots
-data_folder : /home/cb719/Documents/Datasets/VertexDatasets/OldKFGTTData_oldTQ/CMSSW12
+data_folder : /home/cb719/Documents/Datasets/VertexDatasets/OldKFGTTData_EmuTQ/CMSSW12
 
 Nlatent : 0
 
-starting_lr : 0.005
-qtrain_starting_lr : 0.0005
+starting_lr : 0.001
+qtrain_starting_lr : 0.0001
 
 epochs : 25
 qtrain_epochs : 10
@@ -36,7 +36,7 @@ z0_loss_weight : 1.0
 crossentropy_loss_weight : 1.0
 qtrain_z0_loss_weight : 1.0
 qtrain_crossentropy_loss_weight : 1.0
-Huber_delta : 0.8
+Huber_delta : 0.5
 
 l1regloss : 1e-3
 l2regloss : 1e-10
@@ -45,21 +45,21 @@ nweightlayers : 2
 nassocnodes : 20
 nassoclayers : 2
 
-relative_weight_max : [0.0,0.001,0.005,0.01,0.015,0.02,0.03,0.05,0.08,0.12]
+relative_weight_max : [0.0,0.001,0.005,0.01,0.015,0.02,0.03,0.05,0.07,0.1]
 
 QConfig:
   weight_1: 
     kernel_quantizer: quantized_bits(10,3,alpha=1)
-    bias_quantizer: quantized_bits(10,2,alpha=1)
-    activation : quantized_relu(16,2)
+    bias_quantizer: quantized_bits(10,3,alpha=1)
+    activation : quantized_relu(16,3)
   weight_2:
     kernel_quantizer : quantized_bits(10,3,alpha=1)
-    bias_quantizer : quantized_bits(10,2,alpha=1)
-    activation : quantized_relu(14,2)
+    bias_quantizer : quantized_bits(10,3,alpha=1)
+    activation : quantized_relu(16,3)
   weight_final:
     kernel_quantizer : quantized_bits(10,3,alpha=1)
-    bias_quantizer : quantized_bits(10,2,alpha=1)
-    activation : quantized_relu(14,2)
+    bias_quantizer : quantized_bits(10,3,alpha=1)
+    activation : quantized_relu(16,3)
   conv_1:
     kernel_quantizer : quantized_bits(6,2,alpha=1)
     activation : quantized_relu(7,2)
@@ -68,13 +68,13 @@ QConfig:
     activation : quantized_relu(8,1)
   association_0 :
     kernel_quantizer : quantized_bits(10,3,alpha=1)
-    bias_quantizer : quantized_bits(6,3,alpha=1)
-    activation : quantized_relu(16,2)
+    bias_quantizer : quantized_bits(10,3,alpha=1)
+    activation : quantized_relu(16,3)
   association_1 : 
     kernel_quantizer : quantized_bits(10,3,alpha=1)
-    bias_quantizer : quantized_bits(6,3,alpha=1)
-    activation : quantized_relu(16,2)
+    bias_quantizer : quantized_bits(10,3,alpha=1)
+    activation : quantized_relu(16,3)
   association_final : 
     kernel_quantizer : quantized_bits(10,3,alpha=1)
-    bias_quantizer : quantized_bits(6,3,alpha=1)
+    bias_quantizer : quantized_bits(10,3,alpha=1)
 
