--- a/Env/environment.yml
+++ b/Env/environment.yml
@@ -1,153 +1,195 @@
-name: tf
+name: qtf
 channels:
-  - conda-forge
+  - anaconda
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=conda_forge
+  - _libgcc_mutex=0.1=main
   - _openmp_mutex=4.5=1_gnu
-  - absl-py=0.11.0=pyhd3eb1b0_1
-  - aiohttp=3.7.3=py37h27cfd23_1
-  - astor=0.8.1=py37_0
-  - async-timeout=3.0.1=py37_0
-  - attrs=20.3.0=pyhd3eb1b0_0
-  - awkward=0.15.0=pyhd3deb0d_0
-  - binutils_impl_linux-64=2.31.1=h6176602_1
-  - binutils_linux-64=2.31.1=h6176602_9
+  - _py-xgboost-mutex=2.0=cpu_0
+  - _tflow_select=2.3.0=mkl
+  - abseil-cpp=20210324.2=h2531618_0
+  - absl-py=0.13.0=py39h06a4308_0
+  - aiohttp=3.7.4=py39h27cfd23_1
+  - astor=0.8.1=py39h06a4308_0
+  - astunparse=1.6.3=py_0
+  - async-timeout=3.0.1=py39h06a4308_0
+  - attrs=21.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
-  - blinker=1.4=py37_0
-  - brotlipy=0.7.0=py37h27cfd23_1003
+  - blinker=1.4=py39h06a4308_0
+  - blosc=1.21.0=h8c45485_0
+  - bottleneck=1.3.2=py39hdd57654_1
+  - brotlipy=0.7.0=py39h27cfd23_1003
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.17.1=h27cfd23_0
-  - ca-certificates=2021.1.19=h06a4308_0
-  - cachetools=4.2.0=pyhd3eb1b0_0
-  - certifi=2020.12.5=py37h06a4308_0
-  - cffi=1.14.4=py37h261ae71_0
-  - chardet=3.0.4=py37h06a4308_1003
-  - click=7.1.2=py_0
-  - cloudpickle=1.1.1=py_0
-  - cmake=3.19.4=h973ab73_0
-  - cryptography=2.9.2=py37h1ba5d50_0
-  - cudatoolkit=10.1.243=h6bb024c_0
-  - cudnn=7.6.5=cuda10.1_0
-  - cupti=10.1.168=0
-  - cycler=0.10.0=py37_0
-  - dbus=1.13.18=hb2f20db_0
-  - decorator=4.4.2=py_0
-  - expat=2.2.10=he6710b0_2
-  - fontconfig=2.13.1=hba837de_1004
-  - freetype=2.10.4=h5ab3b9f_0
-  - gast=0.2.2=py37_0
-  - gcc_impl_linux-64=7.3.0=habb00fd_1
-  - gcc_linux-64=7.3.0=h553295d_9
-  - glib=2.66.1=h92f7085_0
-  - google-auth=1.24.0=pyhd3eb1b0_0
-  - google-auth-oauthlib=0.4.2=pyhd3eb1b0_2
-  - google-pasta=0.2.0=py_0
-  - grpcio=1.31.0=py37hf8bcb03_0
-  - gst-plugins-base=1.14.0=h8213a91_2
-  - gstreamer=1.14.0=h28cd5cc_2
-  - gxx_impl_linux-64=7.3.0=hdf63c60_1
-  - gxx_linux-64=7.3.0=h553295d_9
-  - h5py=2.10.0=py37hd6299e0_1
+  - ca-certificates=2022.10.11=h06a4308_0
+  - cached-property=1.5.2=py_0
+  - cachetools=4.2.2=pyhd3eb1b0_0
+  - certifi=2022.9.24=py39h06a4308_0
+  - cffi=1.14.6=py39h400218f_0
+  - chardet=3.0.4=py39h06a4308_1003
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - click=8.0.1=pyhd3eb1b0_0
+  - coverage=5.5=py39h27cfd23_2
+  - cryptography=3.4.7=py39hd23ed53_0
+  - cython=0.29.24=py39h295c915_0
+  - dataclasses=0.8=pyh6d0b6a4_7
+  - flatbuffers=2.0.0=h2531618_0
+  - gast=0.4.0=pyhd3eb1b0_0
+  - giflib=5.2.1=h7b6447c_0
+  - google-auth=1.33.0=pyhd3eb1b0_0
+  - google-auth-oauthlib=0.4.1=py_2
+  - google-pasta=0.2.0=pyhd3eb1b0_0
+  - grpcio=1.36.1=py39h2157cd5_1
+  - h5py=3.2.1=py39h6c542dc_0
   - hdf5=1.10.6=hb1b8bf9_0
-  - icu=58.2=he6710b0_3
-  - idna=2.10=py_0
-  - importlib-metadata=2.0.0=py_1
-  - intel-openmp=2020.2=254
-  - joblib=1.0.0=pyhd3eb1b0_0
-  - jpeg=9b=h024ee3a_2
-  - keras-applications=1.0.8=py_1
-  - keras-preprocessing=1.1.0=py_1
-  - kiwisolver=1.3.0=py37h2531618_0
-  - krb5=1.17.1=h173b8e3_0
-  - lcms2=2.11=h396b838_0
-  - ld_impl_linux-64=2.33.1=h53a641e_7
-  - libcurl=7.71.1=hcdd3856_8
-  - libedit=3.1.20191231=h14c3975_1
+  - icu=68.1=h2531618_0
+  - idna=3.2=pyhd3eb1b0_0
+  - importlib-metadata=4.8.1=py39h06a4308_0
+  - intel-openmp=2021.3.0=h06a4308_3350
+  - jpeg=9d=h7f8727e_0
+  - keras-preprocessing=1.1.2=pyhd3eb1b0_0
+  - krb5=1.19.2=hac12032_0
+  - ld_impl_linux-64=2.35.1=h7274673_9
+  - libcurl=7.78.0=h0b77cf5_0
+  - libedit=3.1.20210714=h7f8727e_0
   - libev=4.33=h7b6447c_0
   - libffi=3.3=he6710b0_2
-  - libgcc-ng=9.3.0=h2828fa1_18
-  - libgfortran-ng=7.3.0=hdf63c60_0
-  - libgomp=9.3.0=h2828fa1_18
+  - libgcc-ng=9.3.0=h5101ec6_17
+  - libgfortran-ng=7.5.0=ha8ba4b0_17
+  - libgfortran4=7.5.0=ha8ba4b0_17
+  - libgomp=9.3.0=h5101ec6_17
   - libnghttp2=1.41.0=hf8bcb03_2
   - libpng=1.6.37=hbc83047_0
-  - libprotobuf=3.13.0.1=hd408876_0
+  - libprotobuf=3.14.0=h8c45485_0
   - libssh2=1.9.0=h1ba5d50_1
-  - libstdcxx-ng=9.3.0=h6de172a_18
-  - libtiff=4.1.0=h2733197_1
-  - libuuid=2.32.1=h7f98852_1000
-  - libuv=1.40.0=h7b6447c_0
-  - libxcb=1.14=h7b6447c_0
-  - libxml2=2.9.10=hb55368b_3
-  - lz4=3.1.0=py37h7b6447c_0
-  - lz4-c=1.9.2=heb0550a_3
-  - markdown=3.3.3=py37h06a4308_0
-  - matplotlib=3.3.2=h06a4308_0
-  - matplotlib-base=3.3.2=py37h817c723_0
-  - mkl=2020.2=256
-  - mkl-service=2.3.0=py37he8ac12f_0
-  - mkl_fft=1.2.0=py37h23d657b_0
-  - mkl_random=1.1.1=py37h0573a6f_0
-  - multidict=4.7.6=py37h7b6447c_1
+  - libstdcxx-ng=9.3.0=hd4cf53a_17
+  - libxgboost=1.5.0=h295c915_1
+  - lz4-c=1.9.3=h295c915_1
+  - lzo=2.10=h7b6447c_2
+  - markdown=3.3.4=py39h06a4308_0
+  - mkl=2021.3.0=h06a4308_520
+  - mkl-service=2.4.0=py39h7f8727e_0
+  - mkl_fft=1.3.0=py39h42c9631_2
+  - mkl_random=1.2.2=py39h51133e4_0
+  - mock=4.0.3=pyhd3eb1b0_0
+  - multidict=5.1.0=py39h27cfd23_2
   - ncurses=6.2=he6710b0_1
-  - numpy=1.19.2=py37h54aff64_0
-  - numpy-base=1.19.2=py37hfa32c7d_0
-  - oauthlib=3.1.0=py_0
-  - olefile=0.46=py37_0
-  - openssl=1.1.1i=h27cfd23_0
-  - opt_einsum=3.1.0=py_0
-  - pcre=8.44=he6710b0_0
-  - pillow=8.1.0=py37he98fc37_0
-  - pip=20.3.3=py37h06a4308_0
-  - protobuf=3.13.0.1=py37he6710b0_1
-  - pyasn1=0.4.8=py_0
+  - numexpr=2.7.3=py39h22e1b3c_1
+  - numpy=1.20.3=py39hf144106_0
+  - numpy-base=1.20.3=py39h74d4b33_0
+  - oauthlib=3.1.1=pyhd3eb1b0_0
+  - openssl=1.1.1q=h7f8727e_0
+  - opt_einsum=3.3.0=pyhd3eb1b0_1
+  - pandas=1.3.2=py39h8c16a72_0
+  - protobuf=3.14.0=py39h2531618_1
+  - py-xgboost=1.5.0=py39h06a4308_1
+  - pyasn1=0.4.8=pyhd3eb1b0_0
   - pyasn1-modules=0.2.8=py_0
   - pycparser=2.20=py_2
-  - pyjwt=2.0.0=py37h06a4308_0
+  - pyjwt=2.1.0=py39h06a4308_0
   - pyopenssl=20.0.1=pyhd3eb1b0_1
-  - pyparsing=2.4.7=py_0
-  - pyqt=5.9.2=py37h05f1152_2
-  - pysocks=1.7.1=py37_1
-  - python=3.7.9=h7579374_0
-  - python-dateutil=2.8.1=py_0
-  - python-xxhash=2.0.0=py37h5e8e339_1
-  - python_abi=3.7=1_cp37m
-  - qt=5.9.7=h5867ecd_1
-  - readline=8.0=h7b6447c_0
-  - requests=2.25.1=pyhd3eb1b0_0
+  - pysocks=1.7.1=py39h06a4308_0
+  - pytables=3.6.1=py39h77479fe_1
+  - python=3.9.7=h12debd9_1
+  - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-flatbuffers=1.12=pyhd3eb1b0_0
+  - pytz=2021.1=pyhd3eb1b0_0
+  - pyyaml=5.4.1=py39h27cfd23_1
+  - readline=8.1=h27cfd23_0
+  - requests=2.26.0=pyhd3eb1b0_0
   - requests-oauthlib=1.3.0=py_0
-  - rhash=1.4.1=h3c74f83_1
-  - rsa=4.7=pyhd3eb1b0_1
-  - scikit-learn=0.23.2=py37h0573a6f_0
-  - scipy=1.5.2=py37h0b6359f_0
-  - setuptools=51.1.2=py37h06a4308_4
-  - sip=4.19.8=py37hf484d3e_0
-  - six=1.15.0=py37h06a4308_0
-  - sqlite=3.33.0=h62c20be_0
-  - tensorboard=2.3.0=pyh4dce500_0
+  - rsa=4.7.2=pyhd3eb1b0_1
+  - scipy=1.7.1=py39h292c36d_2
+  - six=1.16.0=pyhd3eb1b0_0
+  - snappy=1.1.8=he6710b0_0
+  - sqlite=3.36.0=hc218d9a_0
   - tensorboard-plugin-wit=1.6.0=py_0
-  - tensorflow-base=2.1.0=gpu_py37h6c5654b_0
-  - tensorflow-estimator=2.1.0=pyhd54b08b_0
-  - tensorflow-probability=0.8.0=py_0
-  - termcolor=1.1.0=py37_1
-  - threadpoolctl=2.1.0=pyh5ca1d4c_0
+  - tensorflow-estimator=2.6.0=pyh7b7c402_0
+  - termcolor=1.1.0=py39h06a4308_1
+  - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.10=hbc83047_0
-  - tornado=6.1=py37h27cfd23_0
-  - typing-extensions=3.7.4.3=0
-  - typing_extensions=3.7.4.3=py_0
-  - uproot=3.4.6=py37_0
-  - uproot-base=3.4.6=py37_0
-  - uproot-methods=0.9.2=pyhd8ed1ab_0
-  - urllib3=1.26.2=pyhd3eb1b0_0
-  - werkzeug=1.0.1=py_0
-  - wheel=0.36.2=pyhd3eb1b0_0
-  - wrapt=1.12.1=py37h7b6447c_1
-  - xrootd=5.0.3=py37h1418fb8_1
-  - xxhash=0.8.0=h7f98852_3
+  - typing-extensions=3.10.0.2=hd3eb1b0_0
+  - typing_extensions=3.10.0.2=pyh06a4308_0
+  - tzdata=2021a=h5d7bf9c_0
+  - urllib3=1.26.6=pyhd3eb1b0_1
+  - werkzeug=2.0.1=pyhd3eb1b0_0
+  - wrapt=1.12.1=py39he8ac12f_1
+  - xgboost=1.5.0=py39h06a4308_1
   - xz=5.2.5=h7b6447c_0
-  - yarl=1.5.1=py37h7b6447c_0
-  - zipp=3.4.0=pyhd3eb1b0_0
+  - yaml=0.2.5=h7b6447c_0
+  - yarl=1.6.3=py39h27cfd23_0
+  - zipp=3.5.0=pyhd3eb1b0_0
   - zlib=1.2.11=h7b6447c_3
-  - zstandard=0.14.1=py37h2531618_0
-  - zstd=1.4.5=h9ceee32_0
-
+  - zstd=1.4.9=haebb681_0
+  - pip:
+    - awkward0==0.15.5
+    - backcall==0.2.0
+    - calmjs-parse==1.3.0
+    - cloudpickle==2.0.0
+    - comet-ml==3.17.0
+    - configobj==5.0.6
+    - cycler==0.10.0
+    - decorator==5.1.0
+    - dm-tree==0.1.6
+    - dulwich==0.20.25
+    - everett==2.0.1
+    - ez-setup==0.9
+    - hls4ml==0.6.0.dev200+g57585cba
+    - ipython==7.28.0
+    - jedi==0.18.0
+    - joblib==1.0.1
+    - jsonschema==3.2.0
+    - keras==2.8.0
+    - keras-tuner==1.0.4
+    - kiwisolver==1.3.2
+    - kt-legacy==1.0.4
+    - libclang==14.0.1
+    - matplotlib==3.4.3
+    - matplotlib-inline==0.1.3
+    - mplhep==0.3.12
+    - mplhep-data==0.0.3
+    - networkx==2.6.3
+    - nvidia-ml-py3==7.352.0
+    - onnx==1.10.2
+    - packaging==21.0
+    - parse==1.6.5
+    - parso==0.8.2
+    - pexpect==4.8.0
+    - pickleshare==0.7.5
+    - pillow==8.3.2
+    - pip==22.3.1
+    - ply==3.11
+    - prompt-toolkit==3.0.20
+    - ptyprocess==0.7.0
+    - pydigitalwavetools==1.1
+    - pydot==1.4.2
+    - pygments==2.10.0
+    - pyparser==1.0
+    - pyparsing==2.4.7
+    - pyrsistent==0.18.0
+    - python-graphviz==0.19.1
+    - qkeras==0.9.0
+    - requests-toolbelt==0.9.1
+    - scikit-learn==1.0
+    - seaborn==0.11.2
+    - semantic-version==2.8.5
+    - setuptools==65.5.0
+    - tabulate==0.9.0
+    - tensorboard==2.8.0
+    - tensorboard-data-server==0.6.1
+    - tensorflow==2.8.0
+    - tensorflow-decision-forests==0.2.4
+    - tensorflow-io-gcs-filesystem==0.25.0
+    - tensorflow-model-optimization==0.6.0
+    - tensorflow-probability==0.14.0
+    - tf-estimator-nightly==2.8.0.dev2021122109
+    - tqdm==4.62.3
+    - traitlets==5.1.0
+    - uhi==0.3.0
+    - uproot3==3.14.4
+    - uproot3-methods==0.10.1
+    - wcwidth==0.2.5
+    - websocket-client==1.2.1
+    - wheel==0.37.1
+    - wurlitzer==3.0.2
+prefix: /home/cebrown/anaconda3/envs/qtf
