--- a/setup.yaml
+++ b/setup.yaml
@@ -38,34 +38,66 @@ nassoclayers : 2
 
 relative_weight_max : [0.0,0.001,0.005,0.01,0.015,0.03,0.05,0.08,0.1,0.12]
 
+# QConfig:
+#   weight_1: 
+#     kernel_quantizer: quantized_bits(7,1,alpha=1) #8,2
+#     bias_quantizer: quantized_bits(5,1,alpha=1) #9,1
+#     activation : quantized_relu(7,1) #10,2
+#   weight_2:
+#     kernel_quantizer : quantized_bits(7,1,alpha=1) #8,2
+#     bias_quantizer : quantized_bits(5,1,alpha=1) #9,1
+#     activation : quantized_relu(7,1)  #10,2
+#   weight_final:
+#     kernel_quantizer : quantized_bits(7,1,alpha=1)  #5,2
+#     bias_quantizer : quantized_bits(5,1,alpha=1) #6,1
+#     activation : quantized_relu(7,1) #10,2
+#   conv_1:
+#     kernel_quantizer : quantized_bits(7,1,alpha=1) #2,6
+#     activation : quantized_relu(7,1) #8,2
+#   PVDense:
+#     kernel_quantizer : quantized_bits(16,6,alpha=1)
+#     bias_quantizer : quantized_bits(16,6,alpha=1)
+#   association_0 :
+#     kernel_quantizer : quantized_bits(7,1,alpha=1) #12,1
+#     bias_quantizer : quantized_bits(5,1,alpha=1) #8,2
+#     activation : quantized_relu(7,1)
+#   association_1 : 
+#     kernel_quantizer : quantized_bits(7,1,alpha=1) #12,1
+#     bias_quantizer : quantized_bits(5,1,alpha=1) #5,1
+#     activation : quantized_relu(7,1)
+#   association_final : 
+#     kernel_quantizer : quantized_bits(7,1,alpha=1) #7,1
+#     bias_quantizer : quantized_bits(4,1,alpha=1) #4,1
+
+
 QConfig:
   weight_1: 
-    kernel_quantizer: quantized_bits(8,2,alpha=1) #8,2
-    bias_quantizer: quantized_bits(6,1,alpha=1) #9,1
-    activation : quantized_relu(8,2) #10,2
+    kernel_quantizer: quantized_bits(9,1,alpha=1) #8,2
+    bias_quantizer: quantized_bits(11,1,alpha=1) #9,1
+    activation : quantized_relu(9,2) #10,2
   weight_2:
-    kernel_quantizer : quantized_bits(8,2,alpha=1) #8,2
-    bias_quantizer : quantized_bits(6,1,alpha=1) #9,1
-    activation : quantized_relu(8,2)  #10,2
+    kernel_quantizer : quantized_bits(14,1,alpha=1) #8,2
+    bias_quantizer : quantized_bits(8,1,alpha=1) #9,1
+    activation : quantized_relu(9,2)  #10,2
   weight_final:
-    kernel_quantizer : quantized_bits(5,2,alpha=1)  #5,2
-    bias_quantizer : quantized_bits(6,1,alpha=1) #6,1
-    activation : quantized_relu(8,2) #10,2
+    kernel_quantizer : quantized_bits(9,1,alpha=1)  #5,2
+    bias_quantizer : quantized_bits(7,1,alpha=1) #6,1
+    activation : quantized_relu(9,2) #10,2
   conv_1:
-    kernel_quantizer : quantized_bits(6,2,alpha=1) #2,6
-    activation : quantized_relu(8,2) #8,2
+    kernel_quantizer : quantized_bits(10,2,alpha=1) #2,6
+    activation : quantized_relu(10,2) #8,2
   PVDense:
     kernel_quantizer : quantized_bits(16,6,alpha=1)
     bias_quantizer : quantized_bits(16,6,alpha=1)
   association_0 :
-    kernel_quantizer : quantized_bits(8,1,alpha=1) #12,1
-    bias_quantizer : quantized_bits(6,1,alpha=1) #8,2
+    kernel_quantizer : quantized_bits(10,1,alpha=1) #12,1
+    bias_quantizer : quantized_bits(7,1,alpha=1) #8,2
     activation : quantized_relu(8,2)
   association_1 : 
-    kernel_quantizer : quantized_bits(8,1,alpha=1) #12,1
-    bias_quantizer : quantized_bits(5,1,alpha=1) #5,1
+    kernel_quantizer : quantized_bits(13,1,alpha=1) #12,1
+    bias_quantizer : quantized_bits(7,1,alpha=1) #5,1
     activation : quantized_relu(8,2)
   association_final : 
-    kernel_quantizer : quantized_bits(7,1,alpha=1) #7,1
-    bias_quantizer : quantized_bits(4,1,alpha=1) #4,1
+    kernel_quantizer : quantized_bits(9,1,alpha=1) #7,1
+    bias_quantizer : quantized_bits(5,1,alpha=1) #4,1
 
